# krypto

./: Cargo.toml
docs/: architecture.md  consensus.md  overview.md  usage.md
node/: Cargo.toml
node/src/: main.rs  state_machine.rs
